--- a/src/globals.css
+++ b/src/globals.css
@@ -106,25 +106,14 @@ h1, h2, h3, h4, h5, h6 {
   --stack-shadow: -4px -1px 20px 0px #00000085;
 }
 
-/* body::before {
-  content: "";
-  position: fixed;
-  inset: 0;
-  pointer-events: none;
-  background: var(--gradient);
-  opacity: var(--bg-gradient-opacity); 
-  transition: opacity 0.3s ease;
-  z-index: -1;
-} */
-
 body {
   position: relative;
-  padding: 10dvh 2rem;  /* 14vw */
+  padding: 10dvh 2rem; 
   padding-bottom: 0 !important;
   transition: background-color 0.3s ease, color 0.3s ease, box-shadow 0.3s ease, border 0.3s ease;
   font-family: var(--font-geist-sans);
   background-color: var(--background);
-  /* background: var(--gradient) !important; */
+  overflow-x: hidden;
   color: var(--text-clr);
   font-size: clamp(1rem, 1.5vw, 1.125rem);
   font-weight: 350;
@@ -176,6 +165,11 @@ html.dark strong {
 
 a, button {
   font-weight: 600;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
 }
 
 button {
